--- a/index.templ
+++ b/index.templ
@@ -3,6 +3,7 @@ package main
 import (
 	"fmt"
 	"strconv"
+	"strings"
 )
 
 templ Layout() {
@@ -49,16 +50,16 @@ templ Schedules(i []Schedule) {
 
 templ listItem(s string) {
 	<li
-		class="border flex gap-2"
-		hx-get={ fmt.Sprintf("/%s", s) }
+		class="flex gap-1 cursor-pointer"
+		hx-get={ fmt.Sprintf("/%s", strings.ToLower(s)) }
 		hx-target="#workspace"
 		hx-trigger="click"
 		hx-swap="innerHTML"
 	>
-		<div>
-			[]
+		<div class="flex pl-6">
+			@circle()
 		</div>
-		<div class="group-[.foo]:invisible">
+		<div class="flex flex-none text-center justify-center transition-all delay-0 group-[.foo]:delay-100 ease-in-out invisible group-[.foo]:visible">
 			{ s }
 		</div>
 	</li>
@@ -67,7 +68,7 @@ templ listItem(s string) {
 templ testComponent () {
 	<div class="flex h-screen w-screen gap ">
 		<div id="cool" class="flex group">
-			<div id="cool" class="flex flex-col border w-[160px] group-[.foo]:w-[76px]">
+			<div id="cool" class="flex bg-zinc-900 text-gray-300 text-sm flex-col transition-all delay-100 ease-in-out  w-[76px] group-[.foo]:w-[160px]">
 				<div id="1a" class="flex flex-col px-2 py-2 h-[128px]">
 					[ logo ] 
 					<div
@@ -75,23 +76,23 @@ templ testComponent () {
 						class="self-end px-2 py-2"
 						hx-on:click="console.log('waaaat'); htmx.toggleClass(htmx.find('#cool'), 'foo')"
 					>
-						">"
+						@Chevron()
 					</div>
 				</div>
 				<div id="1b" class="flex flex-auto flex-col">
 					<div id="1b1" class="flex flex-col">
-						<ul>
-							for _, item := range []string{"workflows", "schedules", "archive"} {
+						<ul class="flex flex-col gap-2 overflow-hidden">
+							for _, item := range []string{"Workflows", "Schedules", "Archive"} {
 								@listItem(item)
 							}
 							<hr class="w-full my-8 stroke-gray-700"/>
 							@listItem("namespaces")
 						</ul>
 					</div>
-					<div id="1b2" class="flex flex-col mt-auto border">
+					<div id="1b2" class="flex flex-col mt-auto  overflow-hidden">
 						<div id="1b2a" class="">
 							<ul>
-								for _, item := range []string{"import", "feedback", "labs off"} {
+								for _, item := range []string{"import", "verrry long stringviasdjaisjdiajsdijasidj", "labs off"} {
 									@listItem(item)
 								}
 							</ul>
@@ -104,8 +105,8 @@ templ testComponent () {
 			</div>
 		</div>
 		<div class="flex flex-col  w-full">
-			<div id="2" class="flex justify-end border h-[50px]">
-				<div id="2a" class="flex border h-[50px] w-[100px] gap-4 items-center justify-center mr-10">
+			<div id="2" class="flex justify-end border-b-2 h-[50px]">
+				<div id="2a" class="flex  h-[50px] w-[100px] gap-4 items-center justify-center mr-10">
 					<div id="s-svg" class="border">
 						[ S ] 
 					</div>
@@ -114,14 +115,26 @@ templ testComponent () {
 					</div>
 				</div>
 			</div>
-			<div id="3" class="border flex flex-col gap-4 h-4/5 w-full py-10 px-10">
-				<div id="title" class="border py-2">
+			<div id="3" class=" flex flex-col gap-4 h-4/5 w-full py-10 px-10">
+				<div id="title" class=" py-2">
 					Hello User: { GetUser(ctx).Name }
 				</div>
-				<div id="workspace" class="border h-[calc(100vh-238px)] w-full">
+				<div id="workspace" class=" h-[calc(100vh-238px)] w-full">
 					Work Space
 				</div>
 			</div>
 		</div>
 	</div>
+}
+
+templ circle() {
+	<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+		<path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125"></path>
+	</svg>
+}
+
+templ Chevron() {
+	<svg id="chev" name="foo" title="rawr" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="flex h-6 w-6 invisible group-[.foo]:rotate-180 group-hover:visible cursor-pointer">
+		<path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"></path>
+	</svg>
 }
